# panda3d-tiled

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  requirements.txt  setup.py
ptiled/: CMakeLists.txt  math.py  resources.py  sprite_list.py  texture_manager.py  types.py
ptiled/sprite/: CMakeLists.txt  base.py  sprite.py
ptiled/tilemap/: CMakeLists.txt  tilemap.py
samples/: map.json  map.py  render.py  tileset_purple.json
